# softdraw

./: .gitignore  CMakeLists.txt
inc/: softdraw.h  softdraw_image.h
src/: main.c  softdraw.c  softdraw_image.c
